fix: Picture image alignment

--- a/frontend_bundler/client/app/styles/base/lb-picture.scss
+++ b/frontend_bundler/client/app/styles/base/lb-picture.scss
@@ -66,7 +66,7 @@
 
     &--infobox-right {
         img {
-            object-position: initial;
+            object-position: left center;
         }
     }
 }
